Added assets for like and delete icons + put them in comments. Implementation to be added later.

--- a/sprint-3/styles/main.css
+++ b/sprint-3/styles/main.css
@@ -596,6 +596,23 @@ body {
   margin-left: 10px;
 }
 
+.conversation__comment-tools {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  height: 20px;
+  margin-top: 16px;
+}
+
+.conversation__comment-tool-icon {
+  height: inherit;
+  width: auto;
+}
+
 @media only screen and (min-width: 768px) {
   .conversation {
     margin: 0 3.13%;
