Added styles to comment tool icons. Modified their HTML to make them buttons ***Note the code in js for that is a bit messy. If there's a way to clean it up, I'll try to figure out how.

--- a/sprint-3/styles/main.css
+++ b/sprint-3/styles/main.css
@@ -609,8 +609,16 @@ body {
 }
 
 .conversation__comment-tool-icon {
+  background-color: #00000000;
+  padding: none;
+  border: none;
   height: inherit;
   width: auto;
+  opacity: 0.4;
+}
+
+.conversation__comment-tool-icon:hover {
+  opacity: 1;
 }
 
 @media only screen and (min-width: 768px) {
