--- a/sprint-3/styles/main.css
+++ b/sprint-3/styles/main.css
@@ -168,9 +168,10 @@ body {
 }
 
 .hero__soundcloud-media {
+  border-radius: 8px;
   width: 100%;
   height: 100px;
-  margin-bottom: 64px;
+  margin-bottom: 50px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -181,7 +182,7 @@ body {
     margin: 0 3.13%;
   }
   .hero__text-wrapper {
-    margin: 96px 0;
+    margin: 96px 0 75px 0;
   }
   .hero__text {
     font-size: 60px;
@@ -192,7 +193,7 @@ body {
     line-height: 24px;
   }
   .hero__soundcloud-media {
-    width: 55%;
+    width: 60%;
     height: 146px;
     margin-bottom: 96px;
   }
@@ -216,7 +217,7 @@ body {
   }
   .hero__text-wrapper {
     margin: 160px 0;
-    max-width: 60%;
+    max-width: 55%;
   }
   .hero__soundcloud-media {
     width: 40.37%;
