--- a/sprint-3/styles/partials/_footer.scss
+++ b/sprint-3/styles/partials/_footer.scss
@@ -58,12 +58,12 @@
         line-height: 22px;
     }
 
-    &__email {
+    &__link {
         text-decoration: none;
         color: $white; 
     }
 
-    &__email:hover {
+    &__link:hover {
         color: $silver;
     }
 
